--- a/introduccion-python/Introduccion a Python.ipynb
+++ b/introduccion-python/Introduccion a Python.ipynb
@@ -76,6 +76,75 @@
     }
    },
    "source": [
+    "# Tipos\n",
+    "\n",
+    "* Números\n",
+    "* None\n",
+    "* Boleanos\n",
+    "* Strings\n",
+    "* Listas\n",
+    "* Tuplas\n",
+    "* Conjuntos\n",
+    "* Diccionarios"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Operaciones\n",
+    "\n",
+    "* Lógicas\n",
+    "* Numericas\n",
+    "* Comparacion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Funciones\n",
+    "\n",
+    "* Parámetros\n",
+    "   * Posicionales\n",
+    "   * Variables\n",
+    "   * Nombrados\n",
+    "* Documentacion\n",
+    "* Lambdas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Objetos\n",
+    "\n",
+    "* Todo es un objeto\n",
+    "* Todo es público\n",
+    "* Herencia multiple\n",
+    "* Métodos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Donde\n",
     "\n",
     "* Web\n",
