--- a/introduccion-python/Introduccion a Python.ipynb
+++ b/introduccion-python/Introduccion a Python.ipynb
@@ -59,6 +59,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Interpretado\n",
+    "Modo interactivo\n",
+    "o “charlando con el intérprete”\n",
+    "• Modo scripting\n",
+    "o Ejecutando un archivo\n",
+    "• Y si quiero un exe?\n",
+    "o py2exe"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -69,6 +89,27 @@
     "# Sintaxis\n",
     "\n",
     "* Indentación\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Sintaxis\n",
+    "Bloques por indentación\n",
+    "El viejo y querido “if” (y versión compacta)\n",
+    "Ciclos for (solo “foreach”)\n",
+    "Ciclos while\n",
+    "Try\n",
+    "Imports\n",
+    "Funciones"
    ]
   },
   {
@@ -92,6 +133,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Tipos basicos\n",
+    "Números: igual que siempre\n",
+    "• Nulo: None\n",
+    "• Boleanos: True, False, (y guarda!!,\n",
+    "muchas otras cosas no booleanas son\n",
+    "verdaderas! Ej: if “hola”)\n",
+    "• Strings: “a”, 'a', “””a“””, '''a'''\n",
+    "• Conjuntos, Diccionarios, Tuplas\n",
+    "• Listas merecen más detalle"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -104,6 +167,28 @@
     "* Lógicas\n",
     "* Numericas\n",
     "* Comparacion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Operaciones comunes\n",
+    "Lógicas\n",
+    "o and, or, not. Y devuelven valores!\n",
+    "• Números:\n",
+    "o + - / * ** %\n",
+    "• Comparación:\n",
+    "o las mismas de siempre\n",
+    "• El polémico “is”\n",
+    "Operaciones comunes"
    ]
   },
   {
@@ -125,6 +210,71 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Mas sobre funciones\n",
+    "Parámetros\n",
+    "o opcionales\n",
+    "o nombrados\n",
+    "o sin saber la cantidad\n",
+    "• Docstrings!!\n",
+    "• Lambdas\n",
+    "Más sobre f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Valores o referencias\n",
+    "Tipos inmutables:\n",
+    "o “apunto a un nuevo objeto”\n",
+    "o Números, strings, ...\n",
+    "• Tipos mutables:\n",
+    "o Pueden cambiar el valor y seguir\n",
+    "siendo el mismo objeto\n",
+    "o Listas, clases del usuario,\n",
+    "diccionarios...\n",
+    "Valores o Referencias???"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Listas y strings\n",
+    "Consultando:\n",
+    "o Slicing (bastante útil)\n",
+    "o Pertenencia\n",
+    "• Modificandolas:\n",
+    "o Borrado (bastante diferente)\n",
+    "o Asignación (bastante útil)\n",
+    "• List comprehensions"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -138,6 +288,70 @@
     "* Todo es público\n",
     "* Herencia multiple\n",
     "* Métodos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Todo es un objeto\n",
+    "No todo tiene que ser una clase!\n",
+    "Propiedades \"al vuelo\"\n",
+    "Todo es público\n",
+    "Herencia (y múltiple)\n",
+    "El mágico __init__ y variables de\n",
+    "instancia\n",
+    "• Métodos de instancia (“que hace el self\n",
+    "ahi??”)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Pilas incluidas\n",
+    "Librería base MUY amplia, desde zip\n",
+    "hasta pop3, xml, archivos csv,\n",
+    "expresiones regulares, unit testing, ...\n",
+    "• Muchas librerías de terceros, para lo\n",
+    "que busquen y para lo que no\n",
+    "busquen :D\n",
+    "(comunicación con msn, estadísticas,\n",
+    "pdf, bases de datos, ORM, ...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Builtins\n",
+    "Funciones útiles\n",
+    "• Parecen “sueltas”, pero están en el\n",
+    "módulo __builtins__\n",
+    "• Ejemplos (algunas ya las vimos):\n",
+    "o dir, len, str, range, min, max, sum,\n",
+    "raw_input, file, map, reversed"
    ]
   },
   {
@@ -202,6 +416,62 @@
     "PySide. Binding de la biblioteca gráfica Qt para Python por Nokia.\n",
     "Plone. Sistema de gestión de contenidos.\n",
     "Biopython, Colección de bibliotecas orientadas a la bioinformática para Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Interfaz gráfica en escritorio\n",
+    "Varios frameworks. Los más usados, no\n",
+    "incluídos con la librería base:\n",
+    "o GTK\n",
+    "o Wx\n",
+    "o Qt\n",
+    "• Separación entre codigo y pantallas.\n",
+    "\n",
+    "Varios frameworks, desde muuuy simples\n",
+    "hasta más complejos:\n",
+    "o Django\n",
+    "o web2py\n",
+    "o Pylons\n",
+    "o TurboGears\n",
+    "o Bottle\n",
+    "o Flask\n",
+    "o web.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Herramientas de Desarrollo\n",
+    "No hay una sola, hay para elegir, y muchas.\n",
+    "• Algunas integran todo (editor de código, diseño de pantallas, debug, etc...).\n",
+    "• O se pueden usar herramientas separadas para cada cosa.\n",
+    "\n",
+    "# Soporte, aprendizaje, ayuda\n",
+    "Mucha documentación y material\n",
+    "abierto (hasta el código mismo del\n",
+    "lenguaje :D)\n",
+    "• Comunidades muy activas y abiertas a\n",
+    "ayudar. En especial, PyAr\n",
+    "(python.org.ar)\n",
+    "Soporte, aprendizaje,"
    ]
   }
  ],
