--- a/introduccion-python/Introduccion a Python.ipynb
+++ b/introduccion-python/Introduccion a Python.ipynb
@@ -41,7 +41,22 @@
     }
    },
    "source": [
-    "* Fácil y divertido"
+    "* Fácil y divertido\n",
+    "* BBC “Monty Python’s Flying Circus”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import this"
    ]
   },
   {
@@ -55,7 +70,38 @@
     "# Interpretado\n",
     "\n",
     "* Interactivo\n",
-    "* Scripting"
+    "> Hablar con el interprete\n",
+    "\n",
+    "* Scripting\n",
+    "> Ejecutar un archivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "## Interactivo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "## Scripting"
    ]
   },
   {
@@ -69,13 +115,7 @@
    },
    "outputs": [],
    "source": [
-    "# Interpretado\n",
-    "Modo interactivo\n",
-    "o “charlando con el intérprete”\n",
-    "• Modo scripting\n",
-    "o Ejecutando un archivo\n",
-    "• Y si quiero un exe?\n",
-    "o py2exe"
+    "hablar de modulos paquetes e import"
    ]
   },
   {
@@ -88,7 +128,12 @@
    "source": [
     "# Sintaxis\n",
     "\n",
-    "* Indentación\n"
+    "* Indentación\n",
+    "* Sentencia if else elif\n",
+    "* Sentencia for\n",
+    "* Sentencia while\n",
+    "* Sentencias break, continue, y else en bucles\n",
+    "* Sentencia pass"
    ]
   },
   {
@@ -272,6 +317,113 @@
     "o Borrado (bastante diferente)\n",
     "o Asignación (bastante útil)\n",
     "• List comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421, 431, 433, 439, 443, 449, 457, 461, 463, 467, 479, 487, 491, 499, 503, 509, 521, 523, 541, 547, 557, 563, 569, 571, 577, 587, 593, 599, 601, 607, 613, 617, 619, 631, 641, 643, 647, 653, 659, 661, 673, 677, 683, 691, 701, 709, 719, 727, 733, 739, 743, 751, 757, 761, 769, 773, 787, 797, 809, 811, 821, 823, 827, 829, 839, 853, 857, 859, 863, 877, 881, 883, 887, 907, 911, 919, 929, 937, 941, 947, 953, 967, 971, 977, 983, 991, 997, 1009, 1013, 1019, 1021, 1031, 1033, 1039, 1049, 1051, 1061, 1063, 1069, 1087, 1091, 1093, 1097, 1103, 1109, 1117, 1123, 1129, 1151, 1153, 1163, 1171, 1181, 1187, 1193, 1201, 1213, 1217, 1223, 1229, 1231, 1237, 1249, 1259, 1277, 1279, 1283, 1289, 1291, 1297, \n",
+      "0.01502370834350586\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import time\n",
+    "def primos(n):\n",
+    "    \"Función que calcula los números primos hasta n\"\n",
+    "    for i in range(1, n):\n",
+    "        for x in range(2, i):\n",
+    "            if i % x == 0:\n",
+    "                break     #No se ejecuta el else\n",
+    "        else:\n",
+    "            print(i, end=\", \")\n",
+    "\n",
+    "now = time()\n",
+    "primos(1300), print()\n",
+    "print(time() - now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421, 431, 433, 439, 443, 449, 457, 461, 463, 467, 479, 487, 491, 499, 503, 509, 521, 523, 541, 547, 557, 563, 569, 571, 577, 587, 593, 599, 601, 607, 613, 617, 619, 631, 641, 643, 647, 653, 659, 661, 673, 677, 683, 691, 701, 709, 719, 727, 733, 739, 743, 751, 757, 761, 769, 773, 787, 797, 809, 811, 821, 823, 827, 829, 839, 853, 857, 859, 863, 877, 881, 883, 887, 907, 911, 919, 929, 937, 941, 947, 953, 967, 971, 977, 983, 991, 997, 1009, 1013, 1019, 1021, 1031, 1033, 1039, 1049, 1051, 1061, 1063, 1069, 1087, 1091, 1093, 1097, 1103, 1109, 1117, 1123, 1129, 1151, 1153, 1163, 1171, 1181, 1187, 1193, 1201, 1213, 1217, 1223, 1229, 1231, 1237, 1249, 1259, 1277, 1279, 1283, 1289, 1291, 1297]\n",
+      "0.013349056243896484\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import time\n",
+    "def primos(n):\n",
+    "    \"Función que retorna los números primos hasta n\"\n",
+    "    primos = []\n",
+    "    for i in range(1, n):\n",
+    "        for x in range(2, i):\n",
+    "            if i % x == 0:\n",
+    "                break     #No se ejecuta el else\n",
+    "        else:\n",
+    "            primos.append(i)\n",
+    "    return primos\n",
+    "\n",
+    "now = time()\n",
+    "print(primos(1300))\n",
+    "print(time() - now)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object primos at 0x7f89cc53faf8>\n",
+      "8.273124694824219e-05\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import time\n",
+    "def primos(n):\n",
+    "    \"Función que genera los números primos hasta n\"\n",
+    "    for i in range(1, n):\n",
+    "        for x in range(2, i):\n",
+    "            if i % x == 0:\n",
+    "                break     #No se ejecuta el else\n",
+    "        else:\n",
+    "            yield i\n",
+    "\n",
+    "now = time()\n",
+    "print(primos(1300))\n",
+    "print(time() - now)"
    ]
   },
   {
