--- a/introduccion-python/Introduccion a Python.ipynb
+++ b/introduccion-python/Introduccion a Python.ipynb
@@ -201,7 +201,15 @@
     }
    },
    "source": [
-    "## Listas"
+    "## Listas\n",
+    "Listas y strings\n",
+    "Consultando:\n",
+    "o Slicing (bastante útil)\n",
+    "o Pertenencia\n",
+    "• Modificandolas:\n",
+    "o Borrado (bastante diferente)\n",
+    "o Asignación (bastante útil)\n",
+    "• List comprehensions"
    ]
   },
   {
@@ -423,27 +431,6 @@
    },
    "outputs": [],
    "source": [
-    "# Mas sobre funciones\n",
-    "Parámetros\n",
-    "o opcionales\n",
-    "o nombrados\n",
-    "o sin saber la cantidad\n",
-    "• Docstrings!!\n",
-    "• Lambdas\n",
-    "Más sobre f"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [],
-   "source": [
     "Valores o referencias\n",
     "Tipos inmutables:\n",
     "o “apunto a un nuevo objeto”\n",
@@ -457,24 +444,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "Listas y strings\n",
-    "Consultando:\n",
-    "o Slicing (bastante útil)\n",
-    "o Pertenencia\n",
-    "• Modificandolas:\n",
-    "o Borrado (bastante diferente)\n",
-    "o Asignación (bastante útil)\n",
-    "• List comprehensions"
+    "# Generadores"
    ]
   },
   {
@@ -547,29 +520,34 @@
     "* Todo es un objeto\n",
     "* Todo es público\n",
     "* Herencia multiple\n",
-    "* Métodos"
+    "* Métodos (classmethod, staticmethod, self)\n",
+    "* Properties (getters, setters)\n",
+    "* Magics (__init__, __str__, __eq__)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "notes"
-    }
+    "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
-    "Todo es un objeto\n",
-    "No todo tiene que ser una clase!\n",
+    "## No todo tiene que ser una clase\n",
+    "\n",
     "Propiedades \"al vuelo\"\n",
-    "Todo es público\n",
-    "Herencia (y múltiple)\n",
-    "El mágico __init__ y variables de\n",
-    "instancia\n",
-    "• Métodos de instancia (“que hace el self\n",
-    "ahi??”)"
+    "El mágico __init__ y variables de instancia\n",
+    "• Métodos de instancia (“que hace el self ahi??”)"
    ]
   },
   {
@@ -595,23 +573,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
-     "slide_type": "notes"
+     "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
-    "Builtins\n",
-    "Funciones útiles\n",
-    "• Parecen “sueltas”, pero están en el\n",
-    "módulo __builtins__\n",
-    "• Ejemplos (algunas ya las vimos):\n",
-    "o dir, len, str, range, min, max, sum,\n",
-    "raw_input, file, map, reversed"
+    "# Builtins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ArithmeticError', 'AssertionError', 'AttributeError', 'BaseException', 'BlockingIOError', 'BrokenPipeError', 'BufferError', 'BytesWarning', 'ChildProcessError', 'ConnectionAbortedError', 'ConnectionError', 'ConnectionRefusedError', 'ConnectionResetError', 'DeprecationWarning', 'EOFError', 'Ellipsis', 'EnvironmentError', 'Exception', 'False', 'FileExistsError', 'FileNotFoundError', 'FloatingPointError', 'FutureWarning', 'GeneratorExit', 'IOError', 'ImportError', 'ImportWarning', 'IndentationError', 'IndexError', 'InterruptedError', 'IsADirectoryError', 'KeyError', 'KeyboardInterrupt', 'LookupError', 'MemoryError', 'NameError', 'None', 'NotADirectoryError', 'NotImplemented', 'NotImplementedError', 'OSError', 'OverflowError', 'PendingDeprecationWarning', 'PermissionError', 'ProcessLookupError', 'ReferenceError', 'ResourceWarning', 'RuntimeError', 'RuntimeWarning', 'StopIteration', 'SyntaxError', 'SyntaxWarning', 'SystemError', 'SystemExit', 'TabError', 'TimeoutError', 'True', 'TypeError', 'UnboundLocalError', 'UnicodeDecodeError', 'UnicodeEncodeError', 'UnicodeError', 'UnicodeTranslateError', 'UnicodeWarning', 'UserWarning', 'ValueError', 'Warning', 'ZeroDivisionError', '__IPYTHON__', '__IPYTHON__active', '__build_class__', '__debug__', '__doc__', '__import__', '__loader__', '__name__', '__package__', '__spec__', 'abs', 'all', 'any', 'ascii', 'bin', 'bool', 'bytearray', 'bytes', 'callable', 'chr', 'classmethod', 'compile', 'complex', 'copyright', 'credits', 'delattr', 'dict', 'dir', 'divmod', 'dreload', 'enumerate', 'eval', 'exec', 'filter', 'float', 'format', 'frozenset', 'get_ipython', 'getattr', 'globals', 'hasattr', 'hash', 'help', 'hex', 'id', 'input', 'int', 'isinstance', 'issubclass', 'iter', 'len', 'license', 'list', 'locals', 'map', 'max', 'memoryview', 'min', 'next', 'object', 'oct', 'open', 'ord', 'pow', 'print', 'property', 'range', 'repr', 'reversed', 'round', 'set', 'setattr', 'slice', 'sorted', 'staticmethod', 'str', 'sum', 'super', 'tuple', 'type', 'vars', 'zip']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(__builtins__))"
    ]
   },
   {
