--- a/introduccion-python/Introduccion a Python.ipynb
+++ b/introduccion-python/Introduccion a Python.ipynb
@@ -70,10 +70,10 @@
     "# Interpretado\n",
     "\n",
     "* Interactivo\n",
-    "> Hablar con el interprete\n",
+    "    * Hablar con el interprete\n",
     "\n",
     "* Scripting\n",
-    "> Ejecutar un archivo"
+    "    * Ejecutar un archivo"
    ]
   },
   {
@@ -97,7 +97,33 @@
     }
    },
    "source": [
-    "## Scripting"
+    "## Scripting\n",
+    "\n",
+    "* Modulos y paquetes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\r\n",
+      "  File \"paquete/fibo.py\", line 25, in <module>\r\n",
+      "    sys.exit(main())\r\n",
+      "  File \"paquete/fibo.py\", line 7, in fib\r\n",
+      "    n = int(sys.argv[1])\r\n",
+      "IndexError: list index out of range\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python paquete/fibo.py"
    ]
   },
   {
